# backend

./: .env.example  .gitignore  API.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_formulas.py
scripts/: seed_all.py  seed_content.py  seed_formulas.py  seed_questions.py  seed_subjects.py  seed_users.py
scripts/_seed_data/: __init__.py
src/app/: __init__.py  main.py
src/app/core/: config.py  db.py  deps.py  exceptions.py  redis.py  security.py  slugs.py  time.py
src/app/models/: __init__.py  base.py  battle.py  billing.py  catalog.py  chat.py  exam.py  formula.py  leaderboard.py  progress.py  security.py  user.py
src/app/modules/battle/: __init__.py  bots.py  elo.py  matchmaking.py  router.py  service.py
src/app/modules/billing/: __init__.py  router.py
src/app/modules/catalog/: __init__.py  router.py
src/app/modules/chat_lesson/: __init__.py  router.py
src/app/modules/exams/: __init__.py  grader.py  router.py
src/app/modules/iam/: __init__.py  router.py  schemas.py  service.py
src/app/modules/leaderboards/: __init__.py  router.py
src/app/modules/progress/: __init__.py  router.py
src/app/modules/roadmap/: __init__.py  generator.py  router.py
src/app/sse/: __init__.py  chat_lesson.py
src/app/workers/: __init__.py  battle_cleanup.py  celery_app.py  premium_expiry.py  snapshots.py  weekly_prize.py
src/app/ws/: __init__.py  battles.py  chat_lesson.py
tests/: conftest.py  test_elo.py  test_health.py  test_security.py  test_slugs.py
