[project]
name = "coachai-backend"
version = "0.1.0"
description = "CoachAI — BMBA Milliy Sertifikat exam prep platform backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "bwi-edtech-hackathon" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "redis[hiredis]>=5.1.0",
    "celery[redis]>=5.4.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "google-generativeai>=0.8.3",
    "sse-starlette>=2.1.3",
    "websockets>=13.1",
    "python-slugify>=8.0.4",
    "pytz>=2024.2",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
